--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.5.4",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
